[project]
name = "rcore-tutorial-guide-2025s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alabaster>=1.0.0",
    "babel>=2.18.0",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "docutils>=0.22.4",
    "furo>=2025.12.19",
    "idna>=3.11",
    "imagesize>=1.4.1",
    "jieba>=0.42.1",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "packaging>=26.0",
    "pygments>=2.19.2",
    "pyparsing>=3.3.2",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "snowballstemmer>=3.0.1",
    "sphinx>=9.1.0",
    "sphinx-comments>=0.0.3",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "urllib3>=2.6.3",
]
